1.21.11 port and improvements